# kengury

./: .astylerc  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  math_test  math_test.cpp  run_math_test.sh  test.cpp  test_format.cpp  test_logger  test_logger.cpp  test_math_functions  test_math_functions.cpp
client/: CMakeLists.txt
client/include/: client.hpp
client/src/: main.cpp
common/: CMakeLists.txt
common/include/: protocol.hpp
common/src/: protocol.cpp
config/: params.json
docs/: Doxyfile
mathlib/: CMakeLists.txt
mathlib/include/: mathlib.hpp
mathlib/src/: mathlib.cpp
server/: CMakeLists.txt
server/include/: server.hpp
server/src/: main.cpp
tests/: CMakeLists.txt  test_mathlib.cpp
